# Archon

./: .gitignore  BRAND.md  README.md  docker-compose.yml  package-lock.json  pnpm-lock.yaml  pnpm-workspace.yaml
agent/: Dockerfile  (+1 more)
api/: .env.example  Dockerfile  pyproject.toml
api/app/: auth.py  config.py  drafter.py  exporter.py  main.py  models.py  persistence.py  plan_analyzer.py  plan_bbox_refiner.py  plan_ocr_refiner.py  plan_overlay.py  rate_limit.py  risk.py  storage.py  taxonomy.py
api/app/cad/: __init__.py  cad_analyzer.py  cad_grounding.py  cad_loader.py  cad_ops.py  cad_render.py  cad_scene.py  cad_symbols.py
api/app/classifier/: ai.py  reconciler.py  rules.py
api/app/coordination/: __init__.py  claims.py  engine.py  flags_store.py  llm_reconcile.py  rules.py
api/app/extractors/: claude_vision.py  doc_rules.py  entities.py  markdown.py  material_rules.py  material_text.py  metrics.py  pdf_native.py  plan_text.py  router.py  spec_rules.py  spec_text.py
api/app/grounding/: matcher.py  render.py  runner.py
api/app/ingestion/: __init__.py  fetcher.py  models.py  pipeline.py  registry.py  routes.py  run.py  sources.yaml  storage.py
api/app/ingestion/archipro/: __init__.py  crawl.py  discovery.py  extract.py  store.py  store_supabase.py
api/app/llm/: embeddings.py  gemini.py  openrouter.py  result_cache.py  retry.py
api/app/mbie/: __init__.py  pathway.py  retriever.py
api/app/plans/: __init__.py  analyzer.py  bbox.py  bbox_refiner.py  flags_store.py  ocr_refiner.py  overlay.py  prompt.py  reconcile.py  registration.py  render.py  stats.py  views.py  vision.py  vote.py
api/app/routes/: address_checklist.py  address_suggest.py  attachments.py  cad.py  classify.py  coordination.py  debug_env.py  documents.py  drafts.py  export.py  extract.py  forecasting.py  form_templates.py  letters.py  plans.py  risk.py  specs.py
api/app/services/: __init__.py  analysis_runner.py  cad_pipeline.py  cost_calculator.py  duration_estimator.py  forecast_summarizer.py  mbie_scraper.py  plan_pipeline.py  risk_profiler.py  spec_flags_store.py  spec_pipeline.py  value_engineering_pipeline.py  ve_pricing.py
api/app/utils/: coordinates.py  document_rules.py  gcsp.py  geocoding.py  safe_filename.py  sse.py
api/app/value_engineering/: __init__.py  analyzer.py  prompt.py  vision.py
api/app/vision/: __init__.py
api/data/: B002ApplicationForBCandPIM.DOCX  archipro_materials.db  cad_ops.schema.json  cad_scene.schema.json  document_rules.json  mbie_cache.json  rfi_classification.yaml
api/prompts/: cad_analyser_v1.md  classifier_v1.md  drafter_v1.md  drafter_v2.md  plan_analyser_v1.md  plan_analyser_v2.md  plan_coordination_v1.md  plan_reconciliation_v1.md  plan_verification_v1.md  plan_verification_v2.md  plan_view_addendum.md  rfi_extract_v1.md  spec_coordination_v1.md  value_engineering_v1.md  ve_extractor_v1.md
api/rules/: rfi_classification.yaml
api/scripts/: make_test_dxf.py  professionalise_floorplan.py  seed_bca_corpus.py
api/tests/: classification_test_set.yaml  rules_regression.yaml  test_accuracy_mechanisms.py  test_archipro_extractor.py  test_cad_grounding.py  test_cad_scene_ops.py  test_classification_accuracy.py  test_coordination_claims.py  test_coordination_llm.py  test_coordination_rules.py  test_coordination_tier2_gate.py  test_cross_view.py  test_determinism_fixes.py  test_entities.py  test_exporter.py  test_grounding_matcher.py  test_llm_result_cache.py  test_llm_retry.py  test_material_rules.py  test_material_text.py  test_mbie_eval_harness.py  test_mbie_extract_robust.py  test_mbie_extractor.py  test_mbie_pathway.py  test_mbie_retriever.py  test_mbie_retriever_hybrid.py  test_plan_discipline.py  test_plan_tiling.py  test_reconciler.py  test_risk.py  test_rules_regression.py  test_spec_rules.py  test_spec_text.py  test_verify_flags_provenance.py  test_voting.py
llm-gateway/: .env.example  Dockerfile  pyproject.toml
llm-gateway/app/: agent_loop.py  config.py  conversations.py  history.py  main.py  rate_limit.py  supabase_client.py
llm-gateway/app/llm/: openrouter_chat.py
llm-gateway/app/prompts/: system.py
llm-gateway/app/routes/: chat.py
llm-gateway/app/tools/: __init__.py  api_client.py  classify_rfi_letter.py  draft_rfi_response.py  get_forecast.py  get_plan_flag.py  get_plan_flags.py  get_project_workflow.py  get_rfi_letter.py  list_plan_flags.py  read_tab.py  score_project_risk.py
llm-gateway/tests/: test_history.py
(+414 files in other folders)
