[project]
name = "consentiq-api"
version = "0.1.0"
description = "ConsentIQ RFI module — FastAPI backend"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "pydantic>=2.9",
  "pydantic-settings>=2.6",
  "python-multipart>=0.0.12",
  "anthropic>=0.40",
  "google-genai>=1.0",
  "pdfplumber>=0.11",
  "pyyaml>=6.0",
  "supabase>=2.10",
  "httpx>=0.27",
  "reportlab>=4.2",
  "python-Levenshtein>=0.26",
  "PyJWT>=2.9",
]

[dependency-groups]
dev = [
  "pytest>=8.3",
  "pytest-asyncio>=0.24",
  "ruff>=0.7",
  "mypy>=1.13",
  "types-PyYAML>=6.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
