[project]
name = "arro-api"
version = "0.1.0"
description = "ARRO RFI module — FastAPI backend"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "pydantic>=2.9",
  "pydantic-settings>=2.6",
  "python-multipart>=0.0.12",
  "google-genai>=1.0",
  "anthropic>=0.40",
  "pdfplumber>=0.11",
  "pyyaml>=6.0",
  "supabase>=2.10",
  "httpx>=0.27",
  "pyproj>=3.7",
  "reportlab>=4.2",
  "python-Levenshtein>=0.26",
  "PyJWT>=2.9",
  "pymupdf>=1.27.2.3",
  "rapidocr-onnxruntime>=1.4",
  "onnxruntime>=1.18,<1.20",
  "beautifulsoup4>=4.12",
  "ezdxf>=1.3",
  "matplotlib>=3.9",
  "slowapi>=0.1.9",
]

[dependency-groups]
dev = [
  "pytest>=8.3",
  "pytest-asyncio>=0.24",
  "ruff>=0.7",
  "mypy>=1.13",
  "types-PyYAML>=6.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

# Data-heavy files where wrapping wide dict literals hurts readability.
[tool.ruff.lint.per-file-ignores]
"app/services/risk_profiler.py" = ["E501"]
"app/services/duration_estimator.py" = ["E501"]
"app/services/cost_calculator.py" = ["E501"]
"tests/test_risk.py" = ["E501"]
"tests/test_exporter.py" = ["E501"]

# FastAPI dependency-injection patterns trip B008 (function call in
# default arg). They're idiomatic, not bugs.
[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = [
  "fastapi.Depends",
  "fastapi.File",
  "fastapi.Form",
  "fastapi.Body",
  "fastapi.Query",
  "fastapi.Path",
  "fastapi.Header",
  "fastapi.Cookie",
  "fastapi.Security",
  "pydantic.Field",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
